<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvTimeHourlyLayoutItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/comfortaa"
        android:includeFontPadding="false"
        android:text="@string/placeholder_time_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <View
        android:layout_width="0.3dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/tvTemperatureHourlyLayoutItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/comfortaa"
        android:includeFontPadding="false"
        android:text="@string/placeholder_temperature"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <View
        android:layout_width="0.3dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/tvWindSpeedHourlyLayoutItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/comfortaa"
        android:includeFontPadding="false"
        android:text="@string/placeholder_wind_speed"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <View
        android:layout_width="0.3dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/tvHumidityHourlyLayoutItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/comfortaa"
        android:includeFontPadding="false"
        android:text="@string/placeholder_humidity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />


</LinearLayout>