<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="7dp"
    android:layout_marginEnd="7dp"
    android:background="@drawable/shape_weather_info_bkg"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvDateDailyLayoutItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:includeFontPadding="false"
        android:text="@string/placeholder_day"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivWeatherIconDailyLayoutItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_sun_sm"
        app:layout_constraintEnd_toEndOf="@+id/tvDateDailyLayoutItem"
        app:layout_constraintStart_toStartOf="@+id/tvDateDailyLayoutItem"
        app:layout_constraintTop_toBottomOf="@+id/tvDateDailyLayoutItem" />

    <TextView
        android:id="@+id/tvMainDegreeDailyLayoutItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:includeFontPadding="false"
        android:text="@string/placeholder_home_frag_degree"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/ivWeatherIconDailyLayoutItem"
        app:layout_constraintStart_toStartOf="@+id/ivWeatherIconDailyLayoutItem"
        app:layout_constraintTop_toBottomOf="@+id/ivWeatherIconDailyLayoutItem" />

    <TextView
        android:id="@+id/tvDegreeSymbolDailyLayoutItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/comfortaa_bold"
        android:includeFontPadding="false"
        android:text="@string/text_degree_symbol"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="9sp"
        app:layout_constraintStart_toEndOf="@+id/tvMainDegreeDailyLayoutItem"
        app:layout_constraintTop_toTopOf="@+id/tvMainDegreeDailyLayoutItem" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0.3dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMainDegreeDailyLayoutItem" />

    <TextView
        android:id="@+id/tvAverageDailyLayoutItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/comfortaa_bold"
        android:includeFontPadding="false"
        android:text="@string/text_average"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAverageDailyLayoutItem">

        <LinearLayout
            android:id="@+id/ln1DailyItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_recycler_view_secondary_bkg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAverageDailyLayoutItem">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_thermometer_sm" />

            <TextView
                android:id="@+id/tvSecondaryDegreeDailyLayoutItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:text="@string/placeholder_home_frag_degree_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln2DailyItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_recycler_view_secondary_bkg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/ln1DailyItemLayout"
            app:layout_constraintStart_toEndOf="@+id/ln1DailyItemLayout"
            app:layout_constraintTop_toTopOf="@+id/ln1DailyItemLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_wind_sm" />

            <TextView
                android:id="@+id/tvWindDailyLayoutItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:text="@string/placeholder_wind_speed_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln3DailyItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_recycler_view_secondary_bkg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/ln2DailyItemLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ln2DailyItemLayout"
            app:layout_constraintTop_toTopOf="@+id/ln2DailyItemLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_humidity_sm" />

            <TextView
                android:id="@+id/tvHumidityDailyLayoutItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:text="@string/placeholder_humidity"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>