<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:id="@+id/lySeeAllSavedCitiesHomeFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:text="@string/placeholder_see_all_saved_cities"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right" />

    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svHomeFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/selector_search_view_bkg"
        app:iconifiedByDefault="false"
        app:searchIcon="@drawable/ic_search"
        app:queryHint="@string/hint_search_location"
        android:theme="@style/CustomSearchInput"
        app:closeIcon="@drawable/ic_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svHomeFrag">

        <ImageView
            android:id="@+id/ivWeatherCodeIconHomeFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_weather_code_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDegreeHomeFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:text="@string/placeholder_home_frag_degree"
            android:textColor="@color/white"
            android:textSize="96sp"
            app:layout_constraintStart_toEndOf="@+id/ivWeatherCodeIconHomeFrag"
            app:layout_constraintTop_toTopOf="@+id/ivWeatherCodeIconHomeFrag" />

        <TextView
            android:id="@+id/symbolDegreeHomeFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:text="@string/text_degree_symbol"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@+id/tvDegreeHomeFrag"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDateHomeFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:text="@string/placeholder_date"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/tvDegreeHomeFrag"
            app:layout_constraintTop_toBottomOf="@+id/tvDegreeHomeFrag" />

        <TextView
            android:id="@+id/tvWeatherInfoHomeFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:text="@string/placeholder_weather_info"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/tvDateHomeFrag"
            app:layout_constraintTop_toBottomOf="@+id/tvDateHomeFrag" />

        <ImageView
            android:id="@+id/ivLocationIconHomeFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_location"
            app:layout_constraintEnd_toStartOf="@+id/tvCountryNameHomeFrag"
            app:layout_constraintTop_toTopOf="@+id/tvCountryNameHomeFrag" />

        <TextView
            android:id="@+id/tvCountryNameHomeFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:text="@string/placeholder_city_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivWeatherCodeIconHomeFrag" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/dark_blue"
        app:cardCornerRadius="17dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time" />

                <TextClock
                    android:id="@+id/tvCurrentTimeHomeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:format24Hour="HH:mm"
                    android:includeFontPadding="false"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_humidity" />

                <TextView
                    android:id="@+id/tvCurrentHumidityHomeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:includeFontPadding="false"
                    android:text="@string/placeholder_humidity"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wind" />

                <TextView
                    android:id="@+id/tvCurrentWindSpeedHomeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:includeFontPadding="false"
                    android:text="@string/placeholder_wind_speed"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/lySeeAllSavedCitiesHomeFrag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:reverseLayout="true" />

    <LinearLayout
        android:id="@+id/lyCoverHomeFrag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/sky_blue"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svHomeFrag">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/pbLoadingBarHomeFrag"
            style="@style/Widget.AppCompat.ProgressBar"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/pbSearchLoadingBarHomeFrag"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/svHomeFrag"
        app:layout_constraintStart_toStartOf="@+id/svHomeFrag"
        app:layout_constraintTop_toBottomOf="@+id/svHomeFrag" />

    <TextView
        android:id="@+id/tvNoResultHomeFrag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/comfortaa"
        android:includeFontPadding="false"
        android:text="@string/text_no_result"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svHomeFrag"
        app:layout_constraintVertical_bias="0.04" />


</androidx.constraintlayout.widget.ConstraintLayout>