<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".ui.DetailsFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivReturnBackIconButtonDetailsFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_return_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCurrentDateDetailsFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:includeFontPadding="false"
        android:text="@string/placeholder_calendar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivReturnBackIconButtonDetailsFrag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivReturnBackIconButtonDetailsFrag"
        app:layout_constraintTop_toTopOf="@+id/ivReturnBackIconButtonDetailsFrag" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/shape_recycler_view_bkg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentDateDetailsFrag">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/text_details_table_hour"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <View
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/text_details_table_temperature"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <View
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/text_details_table_wind_speed"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
            <View
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/text_details_table_humidity"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHourlyWeatherInfoDetailsFrag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCountryNameHomeFrag" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>